# qml-testproject

./: CMakeLists.txt  config.h.in  resources.qrc
assets/qml/: component.qml  main.qml
src/: CMakeLists.txt  main.cpp  mainuicontroller.cpp  mainuicontroller.h  moon.cpp  moon.h  planet.cpp  planet.h  universe.cpp  universe.h
tests/: CMakeLists.txt  exampletest.cpp
